--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
       <symbol viewBox="0 0 20 20" id="icon-phone"><g clip-path="url(#clip0)"><path d="M17.9 9.4H9.4v1.2h8.5l-2.1 2.1.9.9 3.1-3.1a.75.75 0 000-.9l-3.1-3.1-.9.9 2.1 2zM8.1 19.4v-6.2a.65.65 0 00-.6-.6H3.1a1.22 1.22 0 001.2 1.2h2.5v5H3.1a1.79 1.79 0 01-1.9-1.7v-14a1.77 1.77 0 011.7-1.8h3.9v5H4.4a1.22 1.22 0 00-1.2 1.2h4.4a.65.65 0 00.6-.6V.6a.86.86 0 00-.7-.6H3.1A3 3 0 000 2.9v13.9a2.89 2.89 0 002.9 3.1h4.6a.5.5 0 00.6-.5z"/></g><defs><clipPath id="clip0"><path d="M0 0h20v20H0z"/></clipPath></defs></symbol>
     </svg>
 
-    <header class="page-header container">
+    <header class="page-header page-header--inner container">
       <a class="page-header__logo" href="index.html">
         <picture>
           <source media="(min-width: 1440px)" srcset="../img/logo-desktop.svg">
@@ -55,7 +55,7 @@
                 <ul class="application__list">
                   <li class="application__item">
                     <label class="application__label application__label--text application__label--required" for="application-cat-name">Имя:*</label>
-                    <input class="application__input" id="application-cat-name" type="text" name="cat-name" placeholder="Барсик" required>
+                    <input class="application__input" id="application-cat-name" type="text" name="cat-name"  placeholder="Барсик" required>
                   </li>
                   <li class="application__item">
                     <label class="application__label application__label--text application__label--required" for="application-cat-weight">Вес (кг):*</label>
@@ -167,34 +167,32 @@
               <img src="../img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт энерджи">
             </a>
           </div>
-          <div class="page-footer__social social">
-            <ul class="social__list">
-              <li class="social__item">
-                <a class="social__link" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden">Мы в Вконтакте</span>
-                  <svg class="social__icon social__icon--vkontakte" width="23" height="16">
-                    <use xlink:href="#icon-vk"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__link" href="https://www.instagram.com/htmlacademy">
-                  <span class="visually-hidden">Мы в Инстаграме</span>
-                  <svg class="social__icon social__icon--instagram" width="16" height="16">
-                    <use xlink:href="#icon-inst"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__link" href="https://www.facebook.com/htmlacademy">
-                  <span class="visually-hidden">Мы в Фейсбуке</span>
-                  <svg class="social__icon social__icon--facebook" width="13" height="20">
-                    <use xlink:href="#icon-fb"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="page-footer__social social">
+            <li class="social__item">
+              <a class="social__link" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Мы в Вконтакте</span>
+                <svg class="social__icon social__icon--vkontakte" width="23" height="16">
+                  <use xlink:href="#icon-vk"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="https://www.instagram.com/htmlacademy">
+                <span class="visually-hidden">Мы в Инстаграме</span>
+                <svg class="social__icon social__icon--instagram" width="16" height="16">
+                  <use xlink:href="#icon-inst"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="https://www.facebook.com/htmlacademy">
+                <span class="visually-hidden">Мы в Фейсбуке</span>
+                <svg class="social__icon social__icon--facebook" width="13" height="20">
+                  <use xlink:href="#icon-fb"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
           <div class="page-footer__copyright copyright">
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
               HTML Academy
