--- a/source/index.html
+++ b/source/index.html
@@ -15,30 +15,32 @@
       <symbol viewBox="0 0 27 34" id="logo-htmlacademy"><path d="M13.64.02L13.5 0 0 1.4v24.61L13.5 34 27 26.01V1.41L13.64 0zm11.6 25L13.5 31.96 1.77 25.02v-10.1l11.68 6.93.02 1.25-8.02-4.75v1.23l8.04 4.8.02 1.3-8.05-4.76v1.22l8.04 4.81 8.12-4.83V16.9l3.62-2.15v10.26zm0-11.57L22 15.33l-1.48.88-7.06-4.19-.01 1.23 6.04 3.57-.06.03-.13.07-.86.5-4.98-2.95-.01 1.22 3.93 2.33-.93.61-.02.01-2.97-1.74-.01 1.23 1.94 1.13-1.98 1.19L1.8 13.58l11.63-6.96 11.8 6.83zm0-1.22L13.43 5.3 1.77 12.22V2.99L13.5 1.76 25.23 3v9.24z"/></symbol>
     </svg>
 
-    <header class="page-header container">
-      <a class="page-header__logo">
-        <picture>
-          <source media="(min-width: 1440px)" srcset="../img/logo-desktop.svg">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-          <img class="page-header__logo-image" src="../img/logo-mobile.svg" width="190" height="38" alt="Логотип Кэт энерджи">
-        </picture>
-      </a>
-      <nav class="main-nav main-nav--closed  main-nav--nojs">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <ul class="main-nav__list main-nav__list--main-page">
-          <li class="main-nav__item main-nav__item--active">
-            <a>Главная</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
+    <header class="page-header page-header--index">
+      <div class="page-header__wrapper container">
+        <a class="page-header__logo">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="../img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="page-header__logo-image" src="../img/logo-mobile.svg" width="190" height="38" alt="Логотип Кэт энерджи">
+          </picture>
+        </a>
+        <nav class="main-nav main-nav--closed  main-nav--nojs">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <ul class="main-nav__list main-nav__list--main-page">
+            <li class="main-nav__item main-nav__item--active">
+              <a>Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="page-main">
       <div class="page-main__h1-promo-wrapper">
@@ -47,16 +49,18 @@
         </div>
         <section class="promo">
           <h2 class="visually-hidden">Промо-блок Кэт Энерджи</h2>
-          <div class="container promo__wrapper">
+          <div class="promo__wrapper container">
             <p class="promo__slogan">Занялся собой? Займись котом!</p>
-            <picture>
-              <source type="image/webp" media="(min-width: 1440px)" srcset="../img/index-can-desktop.webp 1x, ../img/index-can-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 768px)" srcset="../img/index-can-tablet.webp 1x, ../img/index-can-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="../img/index-can-mobile.webp 1x, ../img/index-can-mobile@2x.webp 2x">
-              <source media="(min-width: 1440px)" srcset="../img/index-can-desktop.png 1x, ../img/index-can-desktop@2x.png 2x">
-              <source media="(min-width: 768px)" srcset="../img/index-can-tablet.jpg 1x, ../img/index-can-tablet@2x.jpg 2x">
-              <img class="promo__image" src="../img/index-can-mobile.png" srcset="../img/index-can-mobile@2x.png 2x" width="280" height="270" alt="Фото упаковки Кэт энерджи">
-            </picture>
+            <div class="promo__image-wrapper">
+              <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="../img/index-can-desktop.webp 1x, ../img/index-can-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="../img/index-can-tablet.webp 1x, ../img/index-can-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="../img/index-can-mobile.webp 1x, ../img/index-can-mobile@2x.webp 2x">
+                <source media="(min-width: 1440px)" srcset="../img/index-can-desktop.png 1x, ../img/index-can-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="../img/index-can-tablet.jpg 1x, ../img/index-can-tablet@2x.jpg 2x">
+                <img class="promo__image" src="../img/index-can-mobile.png" srcset="../img/index-can-mobile@2x.png 2x" width="280" height="270" alt="Фото упаковки Кэт энерджи">
+              </picture>
+            </div>
             <a class="button promo__button" href="form.html">Подобрать программу</a>
           </div>
         </section>
@@ -173,34 +177,32 @@
               <img src="../img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт энерджи">
             </a>
           </div>
-          <div class="page-footer__social social">
-            <ul class="social__list">
-              <li class="social__item">
-                <a class="social__link" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden">Мы в Вконтакте</span>
-                  <svg class="social__icon social__icon--vkontakte" width="23" height="16">
-                    <use xlink:href="#icon-vk"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__link" href="https://www.instagram.com/htmlacademy">
-                  <span class="visually-hidden">Мы в Инстаграме</span>
-                  <svg class="social__icon social__icon--instagram" width="16" height="16">
-                    <use xlink:href="#icon-inst"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__link" href="https://www.facebook.com/htmlacademy">
-                  <span class="visually-hidden">Мы в Фейсбуке</span>
-                  <svg class="social__icon social__icon--facebook" width="13" height="20">
-                    <use xlink:href="#icon-fb"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="page-footer__social social">
+            <li class="social__item">
+              <a class="social__link" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Мы в Вконтакте</span>
+                <svg class="social__icon social__icon--vkontakte" width="23" height="16">
+                  <use xlink:href="#icon-vk"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="https://www.instagram.com/htmlacademy">
+                <span class="visually-hidden">Мы в Инстаграме</span>
+                <svg class="social__icon social__icon--instagram" width="16" height="16">
+                  <use xlink:href="#icon-inst"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="https://www.facebook.com/htmlacademy">
+                <span class="visually-hidden">Мы в Фейсбуке</span>
+                <svg class="social__icon social__icon--facebook" width="13" height="20">
+                  <use xlink:href="#icon-fb"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
           <div class="page-footer__copyright copyright">
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
               HTML Academy
